Add code example

--- a/index.html
+++ b/index.html
@@ -59,11 +59,15 @@
                 <h3 lang="es" class="text-yellow mt-10 mb-5">¿Cual es el truco?</h3>
                 <h3 lang="en" class="text-yellow mt-10 mb-5">What's the trick?</h3>
                 <p lang="es" class="text-left">
-                    Mira el código fuente de esta página, entre la línea 13 y 21. La clave está en ocultar los elementos con el atributo <em>lang</em> <em>es</em> o <em>en</em> dependiendo del estado de los checkboxs.
+                     La clave está en ocultar los elementos con el atributo <em>lang</em> <em>es</em> o <em>en</em> dependiendo del estado de los checkboxs. (Mira el código fuente de esta página, entre la línea 13 y 21.)
                 </p>
                 <p lang="en" class="text-left">
-                    Look at the source code of this page, between line 13 and 21. The key is to hide the elements with the attribute <em>lang</em> <em>es</em> or <em>en</em> depending on the state of the checkboxes.
+                     The key is to hide the elements with the attribute <em>lang</em> <em>es</em> or <em>en</em> depending on the state of the checkboxes.(Look at the source code of this page, between line 13 and 21.)
                 </p>
+                <div class="my-5">
+                    <script src="https://pastebin.com/embed_js/VkCfjeSj"></script>
+                </div>
+                <script src="https://pastebin.com/embed_js/VtYQX52x"></script>
                 <h3 lang="es" class="text-yellow mt-10 mb-5">¿No es mejor usar Javascript?</h3>
                 <h3 lang="en" class="text-yellow mt-10 mb-5">Isn't it better to use Javascript?</h3>
                 <p lang="es" class="text-left">Un Diseñador Web sin conocimientos de programación podría editar y desarrollar esta web. Por otro lado hablamos de una técnica nativa al navegador y funciona aunque el usuario bloque Javascript o falle el Back-End. Por último la librería i18next en su versión reducida (i18next.min.js) ocupa 35,8Kb. Esta página contine HTML y textos en 2 idiomas pesando un total de 4Kb. Valora por ti mismo.</p>
@@ -75,6 +79,9 @@
                 <p lang="es" class="text-left my-5">Funciona con esta página, selecciona el idioma que quieras y refresca el navegador.</p>
 
                 <p lang="en" class="text-left my-5">Works with this page, select the language you want and refresh the browser.</p>
+                <div class="my-5">
+                    <script src="https://pastebin.com/embed_js/efjyhdQp"></script>
+                </div>
             </div>
         </section>
         <footer class="py-32">
