--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </section>
         <footer class="py-32">
-            <a href="https://programadorwebvalencia.com/" class="text-white bg-red py-4 px-6 text-xl rounded shadow-md border-2 border-red font-bold hover:bg-white hover:text-red"><span class="fuente--variable">🤩 <span lang="es">¿Quieres ver más trucos en mi blog?</span><span lang="en">Want to see more tricks on my blog?</span> 🤩</span> </a>
+            <a href="https://programadorwebvalencia.com/" class="text-white bg-red py-4 px-6 text-xl rounded shadow-md border-2 border-red font-bold hover:bg-white hover:text-red"><span class="fuente--variable">🤩 <span lang="es">Mi blog</span><span lang="en">My blog</span> 🤩</span> </a>
         </footer>
     </body>
 </html>
