--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <meta name="keywords" content="example, multilanguage">
         <meta name="description" content="Example of a multi-language website using only CSS">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tanrax/symbiosis-css/symbiosis.min.css">
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
-        <title>Multi-language website using only CSS</title>
+        <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">        <title>Multi-language website using only CSS</title>
         <!-- CSS -->
         <style>
             input[name="choice-lang"][type="radio"][value="en"]:checked ~ * [lang="es"] {
