--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             });
         </script>
     </head>
-    <body class="font-sans bg-teal-light text-center mt-32 text-5xl">
+    <body class="font-sans bg-teal-300 text-center mt-32 text-5xl">
         🇬🇧<input name="choice-lang" class="ml-3 mr-5" type="radio" value="en" checked>
         🇪🇸<input name="choice-lang" class="ml-3" type="radio" value="es">
         <section>
@@ -47,7 +47,7 @@
                 </p>
             </div>
         </section>
-        <section class="bg-blue py-32 text-lg text-white">
+        <section class="bg-blue-500 py-32 text-lg text-white">
             <div class="container mx-auto px-4">
                 <h2 lang="es">
                     🤔 Preguntas frecuentes
