--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         🇪🇸<input name="choice-lang" class="ml-3" type="radio" value="es">
         <section>
             <div class="container mx-auto px-4 pt-10 pb-32">
-                <h1 class="text-center text-white text-4xl"><span lang="en">Multi-language website using only...</span><span lang="es">Web multilenguaje usando solo...</span><br><span lang="en">☔️</span><span lang="es">☀️</span> <span class="text-blue text-5xl">CSS3</span> <span lang="en">💂</span><span lang="es">💃</span></h1>
+                <h1 class="text-center text-white text-4xl"><span lang="en">Multi-language website using only...</span><span lang="es">Web multilenguaje usando solo...</span><br><span lang="en">☔️</span><span lang="es">☀️</span> <span class="text-blue-500 text-5xl">CSS3</span> <span lang="en">💂</span><span lang="es">💃</span></h1>
                 <hr>
                 <p>
-                    <strong lang="es"><span class="text-white">¡Sin <span class="text-yellow">Javascript</span>!</span></strong>
-                    <strong lang="en"><span class="text-white">Not <span class="text-yellow">Javascript</span>!</span></strong>
+                    <strong lang="es"><span class="text-white">¡Sin <span class="text-yellow-500">Javascript</span>!</span></strong>
+                    <strong lang="en"><span class="text-white">Not <span class="text-yellow-500">Javascript</span>!</span></strong>
                 </p>
                 <p>
                 </p>
@@ -55,8 +55,8 @@
                 <h2 lang="en">
                     🤔 FAQ 
                 </h2>
-                <h3 lang="es" class="text-yellow mt-10 mb-5">¿Cual es el truco?</h3>
-                <h3 lang="en" class="text-yellow mt-10 mb-5">What's the trick?</h3>
+                <h3 lang="es" class="text-yellow-500 mt-10 mb-5">¿Cual es el truco?</h3>
+                <h3 lang="en" class="text-yellow-500 mt-10 mb-5">What's the trick?</h3>
                 <p lang="es" class="text-left">
                      La clave está en ocultar los elementos con el atributo <em>lang</em> <em>es</em> o <em>en</em> dependiendo del estado de los checkboxs. (Mira el código fuente de esta página, entre la línea 13 y 21.)
                 </p>
