--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                     <script src="https://pastebin.com/embed_js/VkCfjeSj"></script>
                 </div>
                 <script src="https://pastebin.com/embed_js/VtYQX52x"></script>
-                <h3 lang="es" class="text-yellow mt-10 mb-5">¿No es mejor usar Javascript?</h3>
-                <h3 lang="en" class="text-yellow mt-10 mb-5">Isn't it better to use Javascript?</h3>
+                <h3 lang="es" class="text-yellow-500 mt-10 mb-5">¿No es mejor usar Javascript?</h3>
+                <h3 lang="en" class="text-yellow-500 mt-10 mb-5">Isn't it better to use Javascript?</h3>
                 <p lang="es" class="text-left">Un Diseñador Web sin conocimientos de programación podría editar y desarrollar esta web. Por otro lado hablamos de una técnica nativa al navegador y funciona aunque el usuario bloque Javascript o falle el Back-End. Por último la librería i18next en su versión reducida (i18next.min.js) ocupa 35,8Kb. Esta página contine HTML y textos en 2 idiomas pesando un total de 4Kb. Valora por ti mismo.</p>
                 <p lang="en" class="text-left">A Web Designer without programming skills could edit and develop this website. On the other hand we talk about a native technique to the browser and works even if the user blocks Javascript or fails the Back-End. Finally, the reduced version of the i18next library (i18next.min.js) occupies 35.8Kb. This page contains HTML and texts in 2 languages weighing a total of 4Kb. Rate for yourself.</p>
-                <h3 lang="es" class="text-yellow mt-10 mb-5">¿Se guardar el idioma seleccionado?</h3>
-                <h3 lang="en" class="text-yellow mt-10 mb-5">Is the selected language saved?</h3>
+                <h3 lang="es" class="text-yellow-500 mt-10 mb-5">¿Se guardar el idioma seleccionado?</h3>
+                <h3 lang="en" class="text-yellow-500 mt-10 mb-5">Is the selected language saved?</h3>
                 <p lang="es" class="text-left">Unicamente con CSS no es posible. En el código fuente he dejado un ejemplo de Javascript que soluciona el problema: de la línea 23 a la línea 34.</p>
                 <p lang="en" class="text-left">Only with CSS is not possible. In the source code I have left an example of Javascript that solves the problem: from line 23 to line 34.</p>
                 <p lang="es" class="text-left my-5">Funciona con esta página, selecciona el idioma que quieras y refresca el navegador.</p>
