--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
             </div>
         </section>
         <footer class="py-32">
-            <a href="https://programadorwebvalencia.com/" class="text-white bg-red-500 py-4 px-6 text-xl rounded shadow-md border-2 border-red-500 font-bold hover:bg-white hover:text-red-500"><span class="fuente--variable">🤩 <span lang="es">Mi blog</span><span lang="en">My blog</span> 🤩</span> </a>
+            <p>
+                <a href="https://programadorwebvalencia.com/" class="text-white bg-red-500 py-4 px-6 text-xl rounded shadow-md border-2 border-red-500 font-bold hover:bg-white hover:text-red-500"><span class="fuente--variable">🤩 <span lang="es">Mi blog</span><span lang="en">My blog</span> 🤩</span> </a>
+            </p>
+            <p>
+                Proudly using <a href="https://tailwindcss.com/" class="text-green-500 text-xl rounded font-bold hover:text-red-500"><span class="fuente--variable">Tailwindcss</a>
+            </p>
         </footer>
     </body>
 </html>
