--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         </section>
         <section class="bg-blue-500 py-32 text-lg text-white">
             <div class="container mx-auto px-4">
-                <h2 class="text-xl font-semibold" lang="es">
+                <h2 class="text-5xl font-semibold" lang="es">
                     🤔 Preguntas frecuentes
                 </h2>
-                <h2 class="text-xl font-semibold" lang="en">
+                <h2 class="text-5xl font-semibold" lang="en">
                     🤔 FAQ 
                 </h2>
-                <h3 lang="es" class="text-yellow-500 mt-10 mb-5 text-lg font-semibold">¿Cual es el truco?</h3>
-                <h3 lang="en" class="text-yellow-500 mt-10 mb-5 text-lg font-semibold">What's the trick?</h3>
+                <h3 lang="es" class="text-yellow-500 mt-10 mb-5 text-2xl font-semibold">¿Cual es el truco?</h3>
+                <h3 lang="en" class="text-yellow-500 mt-10 mb-5 text-2xl font-semibold">What's the trick?</h3>
                 <p lang="es" class="text-left">
                      La clave está en ocultar los elementos con el atributo <em>lang</em> <em>es</em> o <em>en</em> dependiendo del estado de los checkboxs. (Mira el código fuente de esta página, entre la línea 13 y 21.)
                 </p>
@@ -67,12 +67,12 @@
                     <script src="https://pastebin.com/embed_js/VkCfjeSj"></script>
                 </div>
                 <script src="https://pastebin.com/embed_js/VtYQX52x"></script>
-                <h3 lang="es" class="text-yellow-500 mt-10 mb-5 text-md font-semibold">¿No es mejor usar Javascript?</h3>
-                <h3 lang="en" class="text-yellow-500 mt-10 mb-5 text-md font-semibold">Isn't it better to use Javascript?</h3>
+                <h3 lang="es" class="text-yellow-500 mt-10 mb-5 text-2xl font-semibold">¿No es mejor usar Javascript?</h3>
+                <h3 lang="en" class="text-yellow-500 mt-10 mb-5 text-2xl font-semibold">Isn't it better to use Javascript?</h3>
                 <p lang="es" class="text-left">Un Diseñador Web sin conocimientos de programación podría editar y desarrollar esta web. Por otro lado hablamos de una técnica nativa al navegador y funciona aunque el usuario bloque Javascript o falle el Back-End. Por último la librería i18next en su versión reducida (i18next.min.js) ocupa 35,8Kb. Esta página contine HTML y textos en 2 idiomas pesando un total de 4Kb. Valora por ti mismo.</p>
                 <p lang="en" class="text-left">A Web Designer without programming skills could edit and develop this website. On the other hand we talk about a native technique to the browser and works even if the user blocks Javascript or fails the Back-End. Finally, the reduced version of the i18next library (i18next.min.js) occupies 35.8Kb. This page contains HTML and texts in 2 languages weighing a total of 4Kb. Rate for yourself.</p>
-                <h3 lang="es" class="text-yellow-500 mt-10 mb-5 text-md font-semibold">¿Se guardar el idioma seleccionado?</h3>
-                <h3 lang="en" class="text-yellow-500 mt-10 mb-5 text-md font-semibold">Is the selected language saved?</h3>
+                <h3 lang="es" class="text-yellow-500 mt-10 mb-5 text-2xl font-semibold">¿Se guardar el idioma seleccionado?</h3>
+                <h3 lang="en" class="text-yellow-500 mt-10 mb-5 text-2xl font-semibold">Is the selected language saved?</h3>
                 <p lang="es" class="text-left">Unicamente con CSS no es posible. En el código fuente he dejado un ejemplo de Javascript que soluciona el problema: de la línea 23 a la línea 34.</p>
                 <p lang="en" class="text-left">Only with CSS is not possible. In the source code I have left an example of Javascript that solves the problem: from line 23 to line 34.</p>
                 <p lang="es" class="text-left my-5">Funciona con esta página, selecciona el idioma que quieras y refresca el navegador.</p>
@@ -87,7 +87,7 @@
             <p>
                 <a href="https://programadorwebvalencia.com/" class="text-white bg-red-500 py-4 px-6 text-xl rounded shadow-md border-2 border-red-500 font-bold hover:bg-white hover:text-red-500"><span class="fuente--variable">🤩 <span lang="es">Mi blog</span><span lang="en">My blog</span> 🤩</span> </a>
             </p>
-            <p>
+            <p class="text-base">
                 Proudly using <a href="https://tailwindcss.com/" class="text-green-500 text-xl rounded font-bold hover:text-red-500"><span class="fuente--variable">Tailwindcss</a>
             </p>
         </footer>
